[package]
name = "simple-nes"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
bitflags = "2.3.3"
const-str = "0.5.6"
winit = "0.28.6"
pixels = "0.13.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
rodio = { version = "0.17.1", default-features = false }
ringbuf = "0.3.3"
gilrs = "0.10.2"
