[package]
name = "simple-nes"
version = "0.1.0"
edition = "2021"
authors = ["Mathis Rech"]
license = "MIT"

[profile.dev]
opt-level = 1

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
bitflags = "2.5.0"
const-str = "0.5.7"
winit = "0.30.0"
wgpu = "0.20.0"
bytemuck = { version = "1.16.0", features = ["derive"] }
rodio = { version = "0.18.0", default-features = false }
ringbuf = "0.4.1"
gilrs = "0.10.7"
pollster = "0.3.0"
ouroboros = "0.18.3"
spin_sleep = "1.2.0"
